# s-core-poc

./: .gitignore  README.md
Node1/: DEMO_README.md  Node1_README.md  README.md  Readme_Pullpiri_lifecycle.md
Node1/TIMPANI/: .gitignore
Node1/TIMPANI/timpani-n/: bpf.cmake
Node1/TIMPANI/timpani-n/src/: core.c  internal.h  sched.c  trpc.c
Node1/TIMPANI/timpani-o/: test_client.cpp
Node1/TIMPANI/timpani-o/examples/: node_configurations.yaml
Node1/TIMPANI/timpani-o/src/: dbus_server.h  schedinfo_service.cpp  schedinfo_service.h
Node1/feo/: .gitignore  Cargo.toml
Node1/feo/.cargo/: config.toml
Node1/feo/examples/rust/mini-adas/: BUILD.bazel  Cargo.toml  HEALTH_MONITOR_INTEGRATION.md  HM_INTEGRATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LAUNCHING_WITH_LM.md  QUICK_REFERENCE.md  README.md  RUN_TEST.md  SETUP_ADAS_PRIMARY_LIBS.md  TESTING_LIFECYCLE_NOW.md  TEST_RESULTS.md  UNDERSTANDING_LM_ERRORS.md  build.rs  build_and_test.sh  run_primary_with_hm.sh  run_secondary.sh  run_with_lm_daemon.sh  setup_lm_daemon.sh  test_hm_integration.sh
Node1/feo/examples/rust/mini-adas/.cargo/: config.toml
Node1/feo/examples/rust/mini-adas/etc/: hm_config.json  hmproc_adas_primary.json  lm_mini_adas_correct.json
Node1/feo/examples/rust/mini-adas/mini-adas-gen/: Cargo.toml
Node1/feo/examples/rust/mini-adas/src/: config.rs  dds_types.rs  lib.rs
Node1/feo/examples/rust/mini-adas/src/activities/: components.rs  input.rs
Node1/feo/src/feo/: Cargo.toml
Node1/feo/src/feo-com/src/iox2/: mod.rs
Node1/feo/src/feo-time/: Cargo.toml
Node1/feo/src/feo-time/src/: lib.rs
Node1/feo/src/feo-tracing/: Cargo.toml
Node1/feo/src/feo-tracing/src/: subscriber.rs
Node1/feo/src/feo/src/: debug_fmt.rs  scheduler.rs
Node1/feo/src/feo/src/agent/direct/: primary.rs  primary_mpsc.rs
Node1/feo/src/feo/src/agent/relayed/: primary.rs
Node1/feo/stubs/score_log/: Cargo.toml
Node1/feo/stubs/score_log/src/: lib.rs
Node1/feo/stubs/score_log_derive/: Cargo.toml
Node1/feo/stubs/score_log_derive/src/: lib.rs
Node1/feo/stubs/stdout_logger/: Cargo.toml
Node1/feo/stubs/stdout_logger/src/: lib.rs
Node1/lifecycle/etc/: ecu_logging_config.json
Node1/lifecycle/examples/pullpiri_LM/: README.md  SETUP.md  run.sh
Node1/lifecycle/examples/pullpiri_LM/config/: BUILD  pullpiri_lm_config.json
Node1/lifecycle/lifecycle/etc/: logging.json
Node1/lifecycle/lifecycle/examples/config/: hm_config.json
Node1/lifecycle/lifecycle/examples/pullpiri_LM/: BUILD  HMPROC_BIN.md  SETUP.md  build_adas_libs.sh  clean.sh  run.sh  setup_system.sh
Node1/lifecycle/lifecycle/examples/pullpiri_LM/config/: hm_config.json  hm_logging.json  pullpiri_lm_config.json
Node1/lifecycle/lifecycle/src/health_monitoring_lib/: BUILD
Node1/lifecycle/lifecycle/src/health_monitoring_lib/rust/deadline/: deadline_monitor.rs  mod.rs
Node1/pullpiri/: .gitignore
Node1/pullpiri/examples/: timpani.sh
Node1/pullpiri/examples/resources/: reschedule_sea.yaml
Node1/pullpiri/scripts/: update_demo_config.sh
Node1/pullpiri/src/agent/nodeagent/src/: main.rs
Node1/pullpiri/src/agent/nodeagent/src/grpc/: sender.rs
Node1/pullpiri/src/common/src/spec/artifact/: schedule.rs
Node1/pullpiri/src/player/statemanager/: Cargo.toml
Node1/pullpiri/src/player/statemanager/src/grpc/: sender.rs
Node1/pullpiri/src/server/apiserver/src/artifact/: mod.rs
Node1/pullpiri/src/server/monitoringserver/src/: manager.rs
Node1/sea_app/: Cargo.toml  Dockerfile  safe-exit-assist.yaml
Node1/sea_app/src/: main.rs
Node1/timpani-o/: .dockerignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
Node1/timpani-o/scripts/: build-image.sh  build-multiarch.sh  push-image.sh
Node1/timpani-o/src/: dbus_server.cpp  dbus_server.h  global_scheduler.cpp  global_scheduler.h  main.cpp  schedinfo_service.cpp  schedinfo_service.h
Node2/: README.md
Node2/TIMPANI/: README.md
Node2/TIMPANI/timpani-n/: bpf.cmake
Node2/TIMPANI/timpani-n/src/: cleanup.c  core.c  internal.h  task.c  timetrigger.h
Node2/TIMPANI/timpani-n/tools/: stress_app_cpus.sh
Node2/TIMPANI/timpani-o/: test_client_exprocs.cpp
Node2/TIMPANI/timpani-o/cmake/: GenProtobuf.cmake
Node2/TIMPANI/timpani-o/proto/: schedinfo.proto
Node2/TIMPANI/timpani-o/src/: dbus_server.cpp  dbus_server.h  fault_client.cpp  fault_client.h  global_scheduler.cpp  global_scheduler.h  schedinfo_service.cpp
Node2/examples/: timpani.sh
Node2/examples/resources/: safe-exit-assist-stop.yaml  safe-exit-assist.yaml  safe-exit-assist2.yaml  timpani-test-1proc-nomiss.yaml  timpani-test-1proc.yaml  timpani-test.yaml
Node2/examples/resources/timpani/: node_configurations.yaml
Node2/lifecycle/: timpani-n
Node2/lifecycle/examples/pullpiri_LM/: README.md  clean_node2.sh  run.sh  setup_node2.sh
Node2/lifecycle/examples/pullpiri_LM/config/: pullpiri_lm_config.json
Node2/pullpiri/examples/resources/: reschdule.yaml  timpani-test.yaml
Node2/pullpiri/examples/resources/timpani/: node_configurations.yaml
Node2/pullpiri/scripts/: update_node2_config.sh
Node2/pullpiri/src/common/src/spec/artifact/: package.rs
Node2/pullpiri/src/player/actioncontroller/src/: main.rs  manager.rs
Node2/pullpiri/src/server/apiserver/src/artifact/: mod.rs
Node2/sea_app/: Dockerfile  safe-exit-assist.yaml
Node2/sea_app2/: Cargo.toml  Dockerfile
Node2/sea_app2/src/: main.rs
Node2/time-trigger/: .editorconfig  CHANGELOG.md  CMakeLists.txt  INSTALL.md  README.md  bpf.cmake  libbpf.cmake  timpani-n.service
Node2/time-trigger/docs/: BUILDING.md  DEPLOYMENT.md  REQUIREMENTS.md  USAGE.md
Node2/time-trigger/libtrpc/: CMakeLists.txt  README.md  aarch64-toolchain.cmake  armhf-toolchain.cmake
Node2/time-trigger/scripts/: build-packages.sh  check-requirements.sh  postinst  release.sh
Node2/time-trigger/scripts/perfetto/: perfetto.py
Node2/time-trigger/src/: apex_monitor.c  cleanup.c  config.c  core.c  globals.c  hyperperiod.c  internal.h  main.c  sched.c  schedinfo.h  task.c  timetrigger.h  trace_bpf.c  trace_bpf.h  trpc.c
Node2/time-trigger/test/: exprocs.c
(+4 files in other folders)
